# Foundry

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  MANUAL.md  README.md  README.rst  THANKS.txt  foundry-smb3.spec  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  searchindex.js  setup.cfg  setup.py
.doctrees/: changelog.doctree  contributing.doctree  enemy_compatibility.doctree  environment.pickle  foundry.core.blocks.doctree  foundry.core.doctree  foundry.core.drawable.doctree  foundry.core.file.doctree  foundry.core.graphics_page.doctree  foundry.core.graphics_set.doctree  foundry.core.namespace.doctree  foundry.core.painter.doctree  foundry.core.palette.doctree  foundry.core.player_animations.doctree  foundry.core.point.doctree  foundry.core.rect.doctree  foundry.core.size.doctree  foundry.core.sprites.doctree  foundry.core.tiles.doctree  foundry.core.warnings.doctree  foundry.data.doctree  foundry.data.icons.doctree  foundry.doctree  foundry.game.doctree  foundry.game.gfx.doctree  foundry.game.gfx.drawable.doctree  foundry.game.gfx.objects.doctree  foundry.game.level.doctree  foundry.graphic_editor.doctree  foundry.gui.doctree  foundry.smb3parse.doctree  foundry.smb3parse.levels.doctree  foundry.smb3parse.objects.doctree  foundry.smb3parse.util.doctree  index.doctree  license.doctree  modules.doctree
.github/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst
.github/workflows/: github_pages.yml  publish.yml  tests.yml
_sources/: foundry.core.graphics_page.rst.txt  foundry.core.namespace.rst.txt  foundry.core.palette.rst.txt  foundry.core.rect.rst.txt  foundry.core.rst.txt  foundry.core.warnings.rst.txt  foundry.data.icons.rst.txt  foundry.game.gfx.rst.txt  foundry.gui.rst.txt  foundry.rst.txt  foundry.smb3parse.objects.rst.txt  foundry.smb3parse.util.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
changelog/: index.html
contributing/: index.html
docs/source/: conf.py  contributing.rst  enemy_compatibility.rst  foundry.core.blocks.rst  foundry.core.drawable.rst  foundry.core.file.rst  foundry.core.graphics_page.rst  foundry.core.graphics_set.rst  foundry.core.painter.rst  foundry.core.player_animations.rst  foundry.core.point.rst  foundry.core.rst  foundry.core.size.rst  foundry.core.sprites.rst  foundry.core.tiles.rst  foundry.core.warnings.rst  foundry.data.rst  foundry.game.gfx.drawable.rst  foundry.game.gfx.objects.rst  foundry.game.gfx.rst  foundry.game.level.rst  foundry.game.rst  foundry.graphic_editor.rst  foundry.gui.rst  foundry.rst  foundry.smb3parse.levels.rst  foundry.smb3parse.objects.rst  foundry.smb3parse.rst  foundry.smb3parse.util.rst  index.rst  license.rst  modules.rst
enemy_compatibility/: index.html
foundry/: __init__.py  index.html  main.py
foundry.core/: index.html
foundry.core.blocks/: index.html
foundry.core.drawable/: index.html
foundry.core.file/: index.html
foundry.core.graphics_page/: index.html
foundry.core.graphics_set/: index.html
foundry.core.namespace/: index.html
foundry.core.painter/: index.html
foundry.core.palette/: index.html
foundry.core.player_animations/: index.html
foundry.core.point/: index.html
foundry.core.rect/: index.html
foundry.core.size/: index.html
foundry.core.sprites/: index.html
foundry.core.tiles/: index.html
foundry.core.warnings/: index.html
foundry.data/: index.html
foundry.data.icons/: index.html
foundry.game/: index.html
foundry.game.gfx/: index.html
foundry.game.gfx.drawable/: index.html
foundry.game.gfx.objects/: index.html
foundry.game.level/: index.html
foundry.graphic_editor/: index.html
foundry.gui/: index.html
foundry.smb3parse/: index.html
foundry.smb3parse.levels/: index.html
foundry.smb3parse.objects/: index.html
foundry.smb3parse.util/: index.html
foundry/core/: Data.py  Enum.py  Position.py  ReduxStore.py  Size.py  UndoController.py  __init__.py  blocks.py  drawable.py  file.py  geometry.py  gui.py  icon.py  menu.py  namespace.py  palette.py  redux_store.py  sprites.py  tasks.py  tiles.py  validators.py
foundry/data/: definitions.json  enemy_definitions.json  gui_styles.json  jump_creator_flags.json  levels.json  main_window_flags.json  namespaces.json  palette.json  rom.ini  spinner_panel_flags.json  tilesets.json  warp_definitions.json
foundry/game/: Data.py  Definitions.py  EnemyDefinitions.py  File.py  ObjectDefinitions.py  ObjectSet.py  (+1 more)
genindex/: index.html
license/: index.html
modules/: index.html
py-modindex/: index.html
search/: index.html
tests/: conftest.py  gui.py
(+262 files in other folders)
