[metadata]
name = foundry_smb3
version = 0.6.1-3
description = The future of SMB3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheJoeSmo/Foundry
author = TheJoeSmo
author_email = joesmo.joesmo12@gmail.com
license = GPL3
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Other Audience
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: iOS
    Topic :: Games/Entertainment

[options]
packages = find:
install_requires =
    PySide6 >=6.3.1
    attrs >=22.1.0
    pydantic >=1.9.2
    qt-material >=2.12
    dill >=0.3.5
    six >=1.16.0
    nest-asyncio >=1.5.6
    numpy >=1.23.4
    func-timeout >=4.3.0
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    foundry = foundry.main:start
    graphics = foundry.graphic_editor.main:start

[tool: isort]
profile = black
known_first_party = foundry

[tool: black]
line-length = 120

[tool: pytest]
qt_api = PySide6
ignore = tests/game/gfx/objects/

[bdist_wheel]
universal = True
